// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailabilityButton should display a dialog when the button is clicked 1`] = `
<div>
  <FlatButton
    backgroundColor="#67cb33"
    disabled={false}
    fullWidth={false}
    label="verifica disponibilità in negozi vicini"
    labelPosition="after"
    labelStyle={
      Object {
        "color": "#fff",
        "fontSize": "16px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
    style={
      Object {
        "height": "70px",
      }
    }
  />
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#333333",
        "padding": "75px 0 0",
      }
    }
    contentStyle={
      Object {
        "maxWidth": "none",
        "width": 1000,
      }
    }
    modal={false}
    open={true}
    repositionOnUpdate={true}
  >
    <CloseButton
      backgroundColor="#333333"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <withState(withState(withState(withState(withHandlers(Connect(AvailabilityMap))))))
      productCode="123"
      productName="abc"
    />
  </Dialog>
</div>
`;

exports[`AvailabilityButton should render properly with a closed dialog 1`] = `
<div>
  <FlatButton
    backgroundColor="#67cb33"
    disabled={false}
    fullWidth={false}
    label="verifica disponibilità in negozi vicini"
    labelPosition="after"
    labelStyle={
      Object {
        "color": "#fff",
        "fontSize": "16px",
      }
    }
    onClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onTouchStart={[Function]}
    primary={false}
    secondary={false}
    style={
      Object {
        "height": "70px",
      }
    }
  />
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#333333",
        "padding": "75px 0 0",
      }
    }
    contentStyle={
      Object {
        "maxWidth": "none",
        "width": 1000,
      }
    }
    modal={false}
    open={false}
    repositionOnUpdate={true}
  >
    <CloseButton
      backgroundColor="#333333"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <withState(withState(withState(withState(withHandlers(Connect(AvailabilityMap))))))
      productCode="123"
      productName="abc"
    />
  </Dialog>
</div>
`;
